<package format="3">
  <name>behavior_trees</name>
  <version>0.1.0</version>
  <description>Project to try behavior trees</description>

  <maintainer email="chintujaguar@gmail.com">Chintan Desai</maintainer>
  <license>MIT</license>
  <author>Chintan Desai</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
